[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
# TODO use official release once the version 0.25.0 is published with the newer solana (1.14.7)
# local build commit fad05805d8b3931169f1ca66253be310ce66ed2e
anchor-spl = { path = "../../../dependencies/anchor/spl" }

[dev-dependencies.trdelnik-client]
path = "../../../crates/client"

[dev-dependencies.program_client]
path = "../.program_client"

[dev-dependencies.escrow]
path = "../programs/escrow"
