[package]
name = "turnstile"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "turnstile"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# TODO use official release once the version 0.25.0 is published with the newer solana (1.14.7)
# local build commit fad05805d8b3931169f1ca66253be310ce66ed2e
anchor-lang = { path = "../../../../dependencies/anchor/lang" }
